--- a/src/containers/scss/partials/_global.scss
+++ b/src/containers/scss/partials/_global.scss
@@ -1,3 +1,10 @@
 body {
-  background: red;
+  background: {
+    color: $very-dark-red;
+    image: url("../assets/images/blood.jpg");
+    repeat: no-repeat;
+    size: cover;
+  }
+
+  height: 100vh;
 }
