--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -1,6 +1,7 @@
 @import "./scss/partials/variables";
 @import "./scss/partials/global";
 @import "./scss/partials/navigation";
+@import "./scss/partials/snapshot";
 
 @media (max-width: 321px) {
   .github {
