--- a/src/containers/scss/partials/_snapshot.scss
+++ b/src/containers/scss/partials/_snapshot.scss
@@ -1,9 +1,20 @@
+@font-face {
+  font-family: "Bloody";
+  src: url("../assets/fonts/BLOODY.TTF") format("truetype");
+}
+
+@font-face {
+  font-family: "True Crimes";
+  src: url("../assets/fonts/crimes.ttf") format("truetype");
+}
+
 .snapshot {
   margin: 1rem 0;
   .mantra {
     color: $primary;
     font: {
       weight: normal;
+      family: Bloody;
     }
   }
 
@@ -15,7 +26,8 @@
 .overview {
   p {
     font: {
-      size: 1.2rem;
+      size: 1.5rem;
+      family: "True Crimes";
       weight: 700;
     }
     color: $primary;
