--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,9 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap");
 body {
-  background-color: #8a0303;
-  background-image: url("../assets/images/blood.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh; }
+  font-size: 100%;
+  line-height: 1.5rem;
+  background: #420d09; }
 
 img {
   max-width: 100%;
@@ -28,7 +27,10 @@ img {
   font-family: "True Crimes";
   src: url("../assets/fonts/crimes.ttf") format("truetype"); }
 .snapshot {
-  margin: 1rem 0; }
+  background-color: #8a0303;
+  background-image: url("../assets/images/blood.jpg");
+  background-repeat: no-repeat;
+  background-size: cover; }
   .snapshot .mantra {
     color: #fff;
     font-weight: normal;
@@ -41,6 +43,43 @@ img {
   font-family: "True Crimes";
   font-weight: 700;
   color: #fff; }
+
+.corologo {
+  color: #fff; }
+
+.total-cases {
+  color: #000;
+  padding: 10px;
+  border-radius: 5px;
+  font-family: "Roboto Condensed", sans-serif; }
+  .total-cases .case-count {
+    font-size: 5rem;
+    color: #8a0303; }
+
+.basic-stats {
+  padding: 5px;
+  color: #000;
+  font-family: "Roboto Condensed", sans-serif; }
+  .basic-stats p {
+    font-size: 1.2rem; }
+
+.stats-explain {
+  color: #000;
+  font-size: 1.1rem;
+  padding: 5px;
+  border-radius: 5px; }
+
+.star-github h5 {
+  font-size: 1rem; }
+
+.content-layout {
+  height: 100vh; }
+  .content-layout h3 {
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 800;
+    padding: 1rem 0.625rem;
+    color: #fff; }
 
 @media (max-width: 321px) {
   .github {
