--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -7,6 +7,8 @@
 @import "./scss/partials/statsexplain";
 @import "./scss/partials/stargithub";
 @import "./scss/partials/contentlayout";
+@import "./scss/partials/tabs";
+@import "./scss/partials/resources";
 
 @media (max-width: 321px) {
   .github {
