added articles updates section

--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -9,6 +9,7 @@
 @import "./scss/partials/contentlayout";
 @import "./scss/partials/tabs";
 @import "./scss/partials/resources";
+@import "./scss/partials/liveupdates";
 
 @media (max-width: 321px) {
   .github {
