--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -72,12 +72,15 @@ img {
 .star-github h5 {
   font-size: 1rem; }
 
+@font-face {
+  font-family: "Bebas";
+  src: url("../assets/fonts/BebasNeue-Regular.ttf") format("truetype"); }
 .content-layout {
   height: 100vh; }
   .content-layout h3 {
     text-align: center;
+    font-family: "Bebas";
     font-size: 2rem;
-    font-weight: 800;
     padding: 1rem 0.625rem;
     color: #fff; }
 
@@ -90,7 +93,7 @@ img {
   padding: 3rem 0.625rem; }
   .resources .resource-link {
     padding: 1rem 1rem;
-    color: #fff;
+    color: #ddd;
     border-radius: 5px;
     font-size: 1.2rem;
     margin: 0.625rem 0; }
@@ -98,6 +101,16 @@ img {
       color: #fff; }
       .resources .resource-link a:hover {
         color: gold; }
+
+.live-updates {
+  margin: 3rem 0; }
+  .live-updates .video-header {
+    color: #fff;
+    margin: 1rem 0;
+    font-weight: 500;
+    opacity: 0.8; }
+  .live-updates .video-container {
+    border-radius: 10px; }
 
 @media (max-width: 321px) {
   .github {
