--- a/src/containers/scss/partials/_contentlayout.scss
+++ b/src/containers/scss/partials/_contentlayout.scss
@@ -1,10 +1,15 @@
+@font-face {
+  font-family: "Bebas";
+  src: url("../assets/fonts/BebasNeue-Regular.ttf") format("truetype");
+}
+
 .content-layout {
   height: 100vh;
 
   h3 {
     text-align: center;
+    font-family: "Bebas";
     font-size: 2rem;
-    font-weight: 800;
     padding: 1rem 0.625rem;
     color: $primary;
   }
