--- a/src/containers/scss/partials/_resources.scss
+++ b/src/containers/scss/partials/_resources.scss
@@ -2,7 +2,7 @@
   padding: 3rem 0.625rem;
   .resource-link {
     padding: 1rem 1rem;
-    color: #fff;
+    color: #ddd;
     border-radius: 5px;
     font-size: 1.2rem;
     margin: 0.625rem 0;
