--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -35,6 +35,13 @@ img {
     color: #fff;
     font-weight: normal;
     font-family: Bloody; }
+    @media (max-width: 960px) {
+      .snapshot .mantra {
+        font-size: 2.5rem; } }
+    @media (max-width: 600px) {
+      .snapshot .mantra {
+        font-size: 2rem;
+        text-align: center; } }
   .snapshot .cursorColor {
     color: gold; }
 
@@ -60,6 +67,9 @@ img {
   padding: 5px;
   color: #000;
   font-family: "Roboto Condensed", sans-serif; }
+  @media (max-width: 768px) {
+    .basic-stats {
+      text-align: center; } }
   .basic-stats p {
     font-size: 1.2rem; }
 
@@ -68,7 +78,13 @@ img {
   font-size: 1.1rem;
   padding: 5px;
   border-radius: 5px; }
+  @media (max-width: 768px) {
+    .stats-explain {
+      text-align: center; } }
 
+@media (max-width: 768px) {
+  .star-github {
+    text-align: center; } }
 .star-github h5 {
   font-size: 1rem; }
 
@@ -111,6 +127,10 @@ img {
     opacity: 0.8; }
   .live-updates .video-container {
     border-radius: 10px; }
+
+@media (max-width: 768px) {
+  .emergency-contacts {
+    text-align: center; } }
 
 @media (max-width: 321px) {
   .github {
