--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -1,3 +1,4 @@
+@import "./scss/partials/media";
 @import "./scss/partials/variables";
 @import "./scss/partials/global";
 @import "./scss/partials/navigation";
@@ -10,6 +11,7 @@
 @import "./scss/partials/tabs";
 @import "./scss/partials/resources";
 @import "./scss/partials/liveupdates";
+@import "./scss/partials/emergencycontacts";
 
 @media (max-width: 321px) {
   .github {
