fetch video and title for live

--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -12,6 +12,8 @@
 @import "./scss/partials/resources";
 @import "./scss/partials/liveupdates";
 @import "./scss/partials/emergencycontacts";
+@import "./scss/partials/spinner";
+@import "./scss/partials/spinkit";
 
 @media (max-width: 321px) {
   .github {
