--- a/src/containers/scss/partials/_snapshot.scss
+++ b/src/containers/scss/partials/_snapshot.scss
@@ -37,12 +37,14 @@
 }
 
 .overview {
-  p {
+  margin-bottom: 4rem;
+  div {
     font: {
       size: 1.5rem;
       family: "True Crimes";
       weight: 700;
     }
+    padding: 10px;
     color: $primary;
   }
 }
