Homepage looking good and completed

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -130,6 +130,8 @@ img {
     opacity: 0.8; }
   .live-updates .video-container {
     border-radius: 10px; }
+  .live-updates .articles {
+    margin: 1rem 0; }
 
 @media (max-width: 768px) {
   .emergency-contacts {
