--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -14,6 +14,7 @@
 @import "./scss/partials/emergencycontacts";
 @import "./scss/partials/spinner";
 @import "./scss/partials/spinkit";
+@import "./scss/partials/articles";
 
 @media (max-width: 321px) {
   .github {
