remove breaking news api

--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -15,6 +15,7 @@
 @import "./scss/partials/spinner";
 @import "./scss/partials/spinkit";
 @import "./scss/partials/articles";
+@import "./scss/partials/articlesloader";
 
 @media (max-width: 321px) {
   .github {
