added country stats

--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -16,6 +16,8 @@
 @import "./scss/partials/spinkit";
 @import "./scss/partials/articles";
 @import "./scss/partials/articlesloader";
+@import "./scss/partials/globalstats";
+@import "./scss/partials/searchbox";
 
 @media (max-width: 321px) {
   .github {
