--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -401,6 +401,25 @@ img {
   50% {
     transform: scale(1);
     -webkit-transform: scale(1); } }
+.global_numbers {
+  display: flex;
+  justify-content: space-between;
+  font-weight: normal; }
+
+.searchbox {
+  margin: 2rem 0;
+  border-radius: 10px;
+  padding: 0 1rem; }
+  .searchbox .search::placeholder {
+    opacity: 0.4; }
+  .searchbox p {
+    text-align: center;
+    margin: -5px 0;
+    font-size: 12px;
+    color: #fff;
+    padding: 5px 0;
+    margin-top: -10px; }
+
 @media (max-width: 321px) {
   .github {
     visibility: hidden; } }
